src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginHorizStack.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

	<StackPanel
  HorizontalAlignment="Left"
  VerticalAlignment="Top"
  Height="450"
  Width="450"
  Background="yellow"
  Orientation="horizontal"
  Margin="-15,-55,10,10">

		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>

	</StackPanel>

</Grid>
